Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,8 @@
     "# First, read the file\n",
     "trips_file = open('trips.json')\n",
     "# Then, convert contents to list of dictionaries \n",
-    "trips = json.load(trips_file)"
+    "trips = json.load(trips_file)\n",
+    "t"
    ]
   },
   {
